--- a/xem-phim-bo/nuoc-quyt-co-ga/index.html
+++ b/xem-phim-bo/nuoc-quyt-co-ga/index.html
@@ -1185,7 +1185,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1663,6 +1663,28 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-en">
+             Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-view">
+             51 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
           <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
            <span class="status">
             FHD Vietsub
@@ -1684,28 +1706,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
            </div>
           </a>
          </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-en">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-view">
-             49 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
         </ul>
        </div>
       </div>
@@ -1720,18 +1720,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/toi-va-anti-fan-ket-hon" title="Tôi và anti-fan kết hôn">
+          <a class="list-top-movie-link" href="/phim-moi/thai-cuc-ton-su" title="Thái Cực Tôn Sư">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-va-anti-fan-ket-hon-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thai-cuc-ton-su-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tôi và anti-fan kết hôn
+             Thái Cực Tôn Sư
             </span>
             <span class="list-top-movie-item-en">
-             So, I Married My Anti-Fan
+             Tai Chi Master
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1742,21 +1742,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sing-my-crush-truy-phong" title="Sing My Crush: Truy Phong">
+          <a class="list-top-movie-link" href="/phim-moi/vung-lay-phan-1" title="Vũng lầy (Phần 1)">
            <span class="status">
-            FHD Vietsub
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sing-my-crush-truy-phong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vung-lay-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sing My Crush: Truy Phong
+             Vũng lầy (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             Sing My Crush
+             The Mire (Season 1)
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             5 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1764,21 +1764,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/linh-hon-dao" title="Linh hồn dao">
+          <a class="list-top-movie-link" href="/phim-moi/tieng-goi-tu-than" title="Tiếng Gọi Tử Thần">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/linh-hon-dao-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tieng-goi-tu-than-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Linh hồn dao
+             Tiếng Gọi Tử Thần
             </span>
             <span class="list-top-movie-item-en">
-             Soul Knife
+             Angel Whispers
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1786,21 +1786,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ban-thich-thu-tu-cua-minh-nhu-the-nao-phan-5" title="Bạn thích thư Tư của mình như thế nào? (Phần 5)">
+          <a class="list-top-movie-link" href="/phim-moi/bo-ba-trom-cap-ban-hoat-hinh-phan-1" title="Bộ ba trộm cắp: Bản hoạt hình (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ban-thich-thu-tu-cua-minh-nhu-the-nao-phan-5-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bo-ba-trom-cap-ban-hoat-hinh-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bạn thích thư Tư của mình như thế nào? (Phần 5)
+             Bộ ba trộm cắp: Bản hoạt hình (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             How do you like Wednesday? (Season 5)
+             Trailer Park Boys: The Animated Series (Season 1)
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             10 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1808,18 +1808,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/a-war" title="A War">
+          <a class="list-top-movie-link" href="/phim-moi/captain-america-ke-bao-thu-dau-tien" title="Captain America: Kẻ Báo Thù Đầu Tiên">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/a-war-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/captain-america-ke-bao-thu-dau-tien-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             A War
+             Captain America: Kẻ Báo Thù Đầu Tiên
             </span>
             <span class="list-top-movie-item-en">
-             A War
+             Captain America: The First Avenger
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
